# Controller

./: .gitignore  LICENSE  README.md  ecosystem_rpg.html  ecosystem_rpg.js  ecosystem_rpg.py  main.py  pyproject.toml  requirements.txt  run_game.py  setup.py
controller/: __init__.py  cli.py  core.py  discovery.py
examples/: basic_usage.py
