[tool.poetry]
name = "controller"
version = "0.1.0"
description = "A Python package for device control"
authors = ["Kyro744 <your_email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0"
requests = "^2.25"
python-dotenv = "^0.17"

# Add other dependencies for device control here
# e.g. yourlibrary = "^x.x"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"